--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,16 @@
           <ul class="ulfive">
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <div class="portfolio-overlay"> 
-                <img src="./images/8.jpg" alt="Технокряк" width="370" height="294" /><div class="overlay-hide"><p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+                <div class="portfolio-overlay">
+                  <img src="./images/8.jpg" alt="Технокряк" width="370" height="294" />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Технокряк</h2>
                   <p class="kind">Веб-сайт</p>
@@ -228,9 +236,6 @@
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
-            </li>
-          </ul>
-        </div>
             </li>
           </ul>
         </div>
