--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="main">
           <div class="container divmainsection">
             <h1 class="main-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-            <button type="button" class="button-primary">Замовити послугу</button>
+            <button data-modal-open type="button" class="button-primary">Замовити послугу</button>
           </div>
         </section>
       </div>
@@ -407,7 +407,6 @@
         </div>
       </div>
     </footer>
-    <button data-modal-open>Замовити послугу</button>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <p></p>
