--- a/index.html
+++ b/index.html
@@ -405,74 +405,82 @@
             </li>
           </ul>
         </div>
+        <div class="form-footer">
+          <form class="form">
+            <b class="form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
+            <div class="form-elements">
+              <label for="mail"></label>
+              <input type="email" name="mail" id="mail" placeholder="E-mail" />
+              <button class="button-subscribe" type="button">
+                Подписаться
+                <svg class="subscribe-icon" width="18" height="18">
+                  <use href="/images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p></p>
-        <button type="button" class="close-modal" data-modal-close>
-          <svg class="close-button" width="20" height="20">
-            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-          </svg>
-        </button>
+        <form class="form js-speaker-form">
+          <button type="button" class="close-modal" data-modal-close>
+            <svg class="close-button" width="20" height="20">
+              <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+            </svg>
+          </button>
+          <b class="modal-title">Залиште свої дані, ми вам передзвонимо</b>
+          <div class="form-field">
+            <label class="form-text" for="name">Ім'я</label>
+            <input class="field-form" type="text" name="name" id="name" />
+            <svg class="icon-form" width="18" height="18">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </div>
+
+          <div class="form-field">
+            <label class="form-text" for="tel">Телефон</label>
+            <input class="field-form" type="tel" name="tel" id="tel" />
+            <svg class="icon-form" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
+
+          <div class="form-field">
+            <label class="form-text" for="mail">Пошта</label>
+            <input class="field-form" type="email" name="mail" id="mail" />
+            <svg class="icon-form" width="18" height="18">
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </div>
+
+          <div class="form-field">
+            <label class="form-text" for="comment">Коментар</label>
+            <textarea
+              class=""
+              name="comment"
+              id="comment"
+              rows="8"
+              placeholder="Введіть текст"
+            ></textarea>
+          </div>
+
+          <div class="form-field agree">
+            <input class="uno" type="checkbox" name="policy" id="policy" />
+            <label class="contract-text" for="policy"
+              >Погоджуюся з розсилкою та приймаю&nbsp<a class="link-contract" href=""
+                >Умови договору</a
+              >
+            </label>
+          </div>
+
+          <div class="button-sub">
+            <button class="button-submit" type="submit">Відправити</button>
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
-
-    <form class="form js-speaker-form">
-      <div class="form-field">
-        <label for="name">Имя</label>
-        <input type="text" name="name" id="name" placeholder="Иван Иваныч" autofocus />
-      </div>
-      <div class="form-field">
-        <label for="tel">Телефон</label>
-        <input type="tel" name="tel" id="tel" />
-      </div>
-      <div class="form-field">
-        <label for="mail">Почта</label>
-        <input type="email" name="mail" id="mail" />
-      </div>
-
-      <br />
-      <div role="group">
-        <input type="checkbox" name="topic" value="html" id="html" />
-        <label for="html">HTML</label>
-        <input type="checkbox" name="topic" value="css" id="css" />
-        <label for="css">CSS</label>
-        <input type="checkbox" name="topic" value="js" id="js" />
-        <label for="js">JavaScript</label>
-      </div>
-
-      <div role="group">
-        <input type="radio" name="experience" value="junior" id="junior" />
-        <label for="junior">Junior</label>
-        <input type="radio" name="experience" value="middle" id="middle" />
-        <label for="middle">Middle</label>
-        <input type="radio" name="experience" value="senior" id="senior" />
-        <label for="senior">Senior</label>
-      </div>
-
-      <label for="date">Дата доклада</label>
-      <input type="datetime-local" name="date" id="date" />
-
-      <br />
-
-      <label for="pdf">Загрузите копию доклада в pdf</label>
-      <input type="file" name="pdf" id="pdf" />
-
-      <br />
-
-      <label for="comment">Оставьте комментарий</label>
-      <textarea name="comment" id="comment" rows="8"></textarea>
-
-      <br />
-
-      <input type="checkbox" name="policy" id="policy" />
-      <label for="policy">Соглашаюсь на всё, за еду</label>
-
-      <br />
-
-      <button type="submit">Оставить заявку</button>
-    </form>
   </body>
 </html>
