--- a/index.html
+++ b/index.html
@@ -440,11 +440,13 @@
           </div>
 
           <div class="form-field">
-            <label class="form-text" for="tel">Телефон</label>
-            <input class="field-form" type="tel" name="tel" id="tel" />
-            <svg class="icon-form" width="18" height="18">
-              <use href="./images/icons.svg#icon-phone-black"></use>
-            </svg>
+            <label class="form-text" for="tel"
+              ><span class="span-form">Телефон</span
+              ><input class="field-form" type="tel" name="tel" />
+              <svg class="icon-form" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </label>
           </div>
 
           <div class="form-field">
@@ -466,10 +468,16 @@
             ></textarea>
           </div>
 
-          <div class="form-field agree">
-            <input class="uno" type="checkbox" name="policy" id="policy" />
-            <label class="contract-text" for="policy"
-              >Погоджуюся з розсилкою та приймаю&nbsp<a class="link-contract" href=""
+          <div class="form-field-agree">
+            <label class="contract-text"
+              ><input class="checkbox" type="checkbox" name="policy" /><svg
+                class="icon-checkbox"
+                width="16"
+                height="15"
+              >
+                <use href="./images/icons.svg#icon-icon-check"></use>
+              </svg>
+              Погоджуюся з розсилкою та приймаю&nbsp<a class="link-contract" href=""
                 >Умови договору</a
               >
             </label>
