--- a/portfolio.html
+++ b/portfolio.html
@@ -239,6 +239,21 @@
             </li>
           </ul>
         </div>
+        <div class="form-footer">
+          <form class="form">
+            <b class="form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
+            <div class="form-elements">
+              <label for="mail"></label>
+              <input type="email" name="mail" id="mail" placeholder="E-mail" />
+              <button class="button-subscribe" type="button">
+                Подписаться
+                <svg class="subscribe-icon" width="18" height="18">
+                  <use href="/images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
