--- a/portfolio.html
+++ b/portfolio.html
@@ -93,12 +93,21 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img
-                  src="./images/9.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/9.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Постер New Orlean vs Golden Star</h2>
                   <p class="kind">Дизайн</p>
@@ -107,7 +116,16 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img src="./images/10.jpg" alt="Ресторан Seafood" width="370" height="294" />
+                <div class="portfolio-overlay">
+                  <img src="./images/10.jpg" alt="Ресторан Seafood" width="370" height="294" />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Ресторан</h2>
                   <p class="kind">Додаток</p>
@@ -116,7 +134,16 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img src="./images/11.jpg" alt="Проєкт Prime" width="370" height="294" />
+                <div class="portfolio-overlay">
+                  <img src="./images/11.jpg" alt="Проєкт Prime" width="370" height="294" />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Проєкт Prime</h2>
                   <p class="kind">Маркетинг</p>
@@ -125,7 +152,16 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img src="./images/12.jpg" alt="Проєкт Boxes" width="370" height="294" />
+                <div class="portfolio-overlay">
+                  <img src="./images/12.jpg" alt="Проєкт Boxes" width="370" height="294" />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Проєкт Boxes</h2>
                   <p class="kind">Додаток</p>
@@ -134,12 +170,21 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img
-                  src="./images/13.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/13.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Inspiration</h2>
                   <p class="kind">Веб-сайт</p>
@@ -148,7 +193,21 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img src="./images/14.jpg" alt="Видання Limited Edition" width="370" height="294" />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/14.jpg"
+                    alt="Видання Limited Edition"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Видання Limited Edition</h2>
                   <p class="kind">Дизайн</p>
@@ -157,7 +216,16 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img src="./images/15.jpg" alt="Проєкт LAB" width="370" height="294" />
+                <div class="portfolio-overlay">
+                  <img src="./images/15.jpg" alt="Проєкт LAB" width="370" height="294" />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Проєкт LAB</h2>
                   <p class="kind">Маркетинг</p>
@@ -166,7 +234,16 @@
             </li>
             <li class="lifive">
               <a href="" class="link-portfolio">
-                <img src="./images/16.jpg" alt="Growing Business" width="370" height="294" />
+                <div class="portfolio-overlay">
+                  <img src="./images/16.jpg" alt="Growing Business" width="370" height="294" />
+                  <div class="overlay-hide">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="project">Growing</h2>
                   <p class="kind">Додаток</p>
