--- a/index.html
+++ b/index.html
@@ -440,18 +440,16 @@
           </div>
 
           <div class="form-field">
-            <label class="form-text" for="tel"
-              ><span class="span-form">Телефон</span
-              ><input class="field-form" type="tel" name="tel" />
-              <svg class="icon-form" width="18" height="18">
-                <use href="./images/icons.svg#icon-phone-black"></use>
-              </svg>
-            </label>
+            <label class="form-text" for="tel">Телефон</label>
+            <input class="field-form" type="tel" name="tel" id="tel" />
+            <svg class="icon-form" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
           </div>
 
           <div class="form-field">
-            <label class="form-text" for="mail">Пошта</label>
-            <input class="field-form" type="email" name="mail" id="mail" />
+            <label class="form-text" for="email">Пошта</label>
+            <input class="field-form" type="email" name="email" id="email" />
             <svg class="icon-form" width="18" height="18">
               <use href="./images/icons.svg#icon-email-black"></use>
             </svg>
@@ -477,7 +475,7 @@
               >
                 <use href="./images/icons.svg#icon-icon-check"></use>
               </svg>
-              Погоджуюся з розсилкою та приймаю&nbsp<a class="link-contract" href=""
+              Погоджуюся з розсилкою та приймаю&nbsp;<a class="link-contract" href=""
                 >Умови договору</a
               >
             </label>
