--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
               <button class="button-subscribe" type="button">
                 Подписаться
                 <svg class="subscribe-icon" width="18" height="18">
-                  <use href="/images/icons.svg#icon-icon-send"></use>
+                  <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
               </button>
             </div>
