--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
       <div class="modal">
         <form class="form js-speaker-form">
           <button type="button" class="close-modal" data-modal-close>
-            <svg class="close-button" width="20" height="20">
-              <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+            <svg class="close-button" width="30" height="30">
+              <use href="./images/icons.svg#icon-close-black-18dp-2-1" width="18" height="18"></use>
             </svg>
           </button>
           <b class="modal-title">Залиште свої дані, ми вам передзвонимо</b>
@@ -467,17 +467,18 @@
           </div>
 
           <div class="form-field-agree">
-            <label class="contract-text"
-              ><input class="checkbox" type="checkbox" name="policy" /><svg
-                class="icon-checkbox"
-                width="16"
-                height="15"
-              >
+            <label class="contract-text">
+              <input class="checkbox" type="checkbox" name="policy" />
+              <svg class="icon-checkbox" width="16" height="15">
                 <use href="./images/icons.svg#icon-icon-check"></use>
               </svg>
-              Погоджуюся з розсилкою та приймаю&nbsp;<a class="link-contract" href=""
-                >Умови договору</a
-              >
+
+              <svg class="tutitu" width="16" height="15">
+                <use href="./images/icons.svg#icon-empty-checkbox"></use>
+              </svg>
+
+              Погоджуюся з розсилкою та приймаю&nbsp;
+              <a class="link-contract" href="">Умови договору</a>
             </label>
           </div>
 
